# TuringState-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
turingstate/: Cargo.toml
turingstate-core/: Cargo.toml
turingstate/ui/: main.slint
ui/: main.slint
