[workspace]
resolver = "2"
members = ["turingstate", "turingstate-core"]

[workspace.dependencies]
slint = "1.15.1"
slint-build = "1.15.1"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.12.0", features = ["v4"] }

[workspace.package]
authors = ["Elouan Lahougue <contact.elouanlahougue@gmail.com>"]
name = "TuringState-rs"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/Elouan-Lahougue/TuringState-rs.git"
